# shortlink-service

./: .gitignore  LICENSE  pyproject.toml
app/: main.py
app/api/: redirect.py  shorten.py
app/models/: url.py  user.py
app/schemas/: shorten.py  user.py
